# ariel-os

./: Cargo.toml  ariel-os-cargo.toml  laze-project.yml
.github/workflows/: build-deploy-docs.yml  build.yml  main.yml  rustdoc.yml
book/src/: SUMMARY.md  adding-board-support.md  adding_board_support.md  async_support.md  running-on-iot-lab.md  support_matrix.html
doc/: gen_support_matrix_html.rs  support_matrix.yml
examples/: laze.yml
examples/blinky/: Cargo.toml
examples/blinky-neopixel/: Cargo.toml  README.md  laze.yml
examples/blinky-neopixel/src/: main.rs  pins.rs
examples/blinky/src/: main.rs  pins.rs
examples/embassy-blink/: Cargo.toml  README.md  laze.yml
examples/embassy-blink/src/: main.rs  pins.rs
examples/embassy-http-server/: Cargo.toml  hw-setup.yml  laze.yml
examples/embassy-http-server/src/: main.rs  pins.rs  sensors.rs
examples/embassy-http-server/static/: index.html  styles.css
examples/embassy-net-tcp/src/: main.rs
examples/embassy-net-udp/src/: main.rs
examples/embassy-usb-keyboard/: Cargo.toml  laze.yml
examples/embassy-usb-keyboard/src/: main.rs  pins.rs
examples/free-fall-detector/: Cargo.toml  laze.yml
examples/free-fall-detector/src/: main.rs  pins.rs  sensors.rs
examples/gpio/src/: main.rs  pins.rs
examples/log/: Cargo.toml
examples/log/src/: main.rs
examples/sensors-debug/: Cargo.toml  hw-setup.yml  laze.yml
examples/sensors-debug/src/: buses.rs  main.rs  pins.rs  sensors.rs
examples/tcp-echo/src/: main.rs
examples/threading-event/: README.md
examples/udp-echo/src/: main.rs
examples/usb-keyboard/: Cargo.toml
src/ariel-os/: Cargo.toml
src/ariel-os-bench/src/: cortexm.rs
src/ariel-os-boards/: Cargo.toml
src/ariel-os-boards/espressif-esp32-c6-devkitc-1/: Cargo.toml
src/ariel-os-boards/src/: lib.rs
src/ariel-os-boards/st-f429i-discovery/: Cargo.toml  memory.x
src/ariel-os-boards/st-f429i-discovery/src/: lib.rs
src/ariel-os-chips/esp32-c6/: Cargo.toml  build.rs  memory.x
src/ariel-os-coap/: build.rs
src/ariel-os-coap/src/: lib.rs
src/ariel-os-debug/: Cargo.toml
src/ariel-os-debug/src/: lib.rs
src/ariel-os-embassy/: Cargo.toml
src/ariel-os-embassy-common/: Cargo.toml
src/ariel-os-embassy-common/src/: executor_swi.rs  identity.rs
src/ariel-os-embassy/src/: debug_uart.rs  delegate.rs  gpio.rs  lib.rs  network.rs  sendcell.rs
src/ariel-os-esp/: Cargo.toml
src/ariel-os-esp/src/: lib.rs  storage.rs
src/ariel-os-hal/: Cargo.toml
src/ariel-os-hal/src/: define_peripherals.rs
src/ariel-os-identity/src/: lib.rs
src/ariel-os-macros/src/: config.rs
src/ariel-os-nrf/src/: lib.rs  uart.rs
src/ariel-os-rp/src/: lib.rs
src/ariel-os-rt/: Cargo.toml
src/ariel-os-rt/src/: lib.rs
src/ariel-os-runqueue/: Cargo.toml
src/ariel-os-runqueue/proofs/fstar/extraction/: hax.fst.config.json
src/ariel-os-runqueue/src/: lib.rs  runqueue.rs
src/ariel-os-stm32/: Cargo.toml  build.rs
src/ariel-os-stm32/src/: hwrng.rs  lib.rs
src/ariel-os-storage/: build.rs  storage.ld.in
src/ariel-os-storage/src/: lib.rs
src/ariel-os-threads/: Cargo.toml
src/ariel-os-threads/src/: lib.rs
src/ariel-os/src/: lib.rs
src/external-push-button-sensor/: Cargo.toml
src/external-push-button-sensor/src/: lib.rs
src/riot-rs/: Cargo.toml
src/riot-rs-arch/src/: lib.rs
src/riot-rs-boards/: Cargo.toml
src/riot-rs-boards/src/: lib.rs
src/riot-rs-builtin-sensors/: Cargo.toml
src/riot-rs-builtin-sensors/src/: aht20.rs  lib.rs  lis3dh.rs  lis3dh_spi.rs  lsm303agr.rs  push_button.rs  push_buttons.rs
src/riot-rs-embassy/: Cargo.toml
src/riot-rs-embassy-common/src/: lib.rs  maybe_inverted_pin.rs
src/riot-rs-embassy/src/: application.rs  define_peripherals.rs  delegate.rs  extint_registry.rs  gpio.rs  i2c.rs  lib.rs  network.rs  spi.rs  usb.rs
src/riot-rs-esp/: Cargo.toml
src/riot-rs-esp/src/: gpio.rs  lib.rs
src/riot-rs-hwsetup/src/: buses.rs  lib.rs  peripherals.rs  sensors.rs
src/riot-rs-interrupts/: Cargo.toml
src/riot-rs-interrupts/src/: interrupts.json  lib.rs
src/riot-rs-macros/: Cargo.toml
src/riot-rs-macros/src/: call_with_stm32_peripheral_list.rs  config.rs  define_count_adjusted_enums.rs  hw_setup.rs  hw_setup_init.rs  lib.rs  main_macro.rs  measure_sensor.rs  read_sensor.rs  spawner.rs  task.rs  thread.rs  utils.rs
src/riot-rs-macros/tests/ui/: config_conflicting_config_kind.stderr  config_missing_kind.stderr
src/riot-rs-macros/tests/ui/main/: incorrect_fn_peripheral_param.rs  incorrect_fn_peripheral_param.stderr  missing_hooks.rs  missing_hooks.stderr  misspelled_hook_name.rs  misspelled_hook_name.stderr  misspelled_hooks_param.rs  misspelled_hooks_param.stderr  non_async_fn_missing_spawner_param.rs  non_async_fn_missing_spawner_param.stderr  unexpected_hooks.rs  unexpected_hooks.stderr
src/riot-rs-macros/tests/ui/spawner/: async_fn.rs  async_fn.stderr
src/riot-rs-nrf/: Cargo.toml
src/riot-rs-nrf/src/: extint_registry.rs  gpio.rs  internal_temp.rs  lib.rs
src/riot-rs-nrf/src/i2c/: controller.rs
src/riot-rs-nrf/src/spi/: main.rs  mod.rs
src/riot-rs-rp/: Cargo.toml
src/riot-rs-rp/src/: cyw43.rs  gpio.rs  lib.rs
src/riot-rs-rt/: Cargo.toml  linkme.x
src/riot-rs-rt/src/: lib.rs
src/riot-rs-runqueue/src/: lib.rs  runqueue.rs
src/riot-rs-saga/: Cargo.toml
src/riot-rs-sensors/: Cargo.toml
src/riot-rs-sensors/src/: category.rs  interrupts.rs  label.rs  lib.rs  physical_unit.rs  physical_value.rs  registry.rs  sensor.rs  sensor_signaling.rs  state_atomic.rs  value.rs  watcher.rs
src/riot-rs-sensors/src/categories/: push_button.rs  temperature.rs
src/riot-rs-shared-types/: Cargo.toml
src/riot-rs-shared-types/src/: gpio.rs  lib.rs
src/riot-rs-shared-types/src/i2c/: controller.rs
src/riot-rs-shared-types/src/spi/: main.rs
src/riot-rs-stm32/: Cargo.toml
src/riot-rs-stm32/src/: extint_registry.rs  gpio.rs  lib.rs  usb_synopsis_otg.rs
src/riot-rs-stm32/src/i2c/: controller.rs
src/riot-rs-stm32/src/spi/: main.rs  mod.rs
src/riot-rs/src/: lib.rs
tests/: laze.yml
tests/i2c-controller/: Cargo.toml
tests/spi-bus/: Cargo.toml
(+55 files in other folders)
