[package]
name = "blinky-neopixel"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["spi", "time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
smart-leds-trait = "0.3.1"
ws2812-async = "0.3.0"
