[package]
name = "blinky"
license.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../src/ariel-os", features = ["i2c", "time"] }
ariel-os-boards = { path = "../../src/ariel-os-boards" }
embedded-hal-async = { workspace = true }
nmea0183 = "0.5.0"
