[package]
name = "sensors-debug"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
embassy-executor = { workspace = true, default-features = false }
embassy-time = { workspace = true, default-features = false }
riot-rs = { path = "../../src/riot-rs", features = ["time"] }
riot-rs-boards = { path = "../../src/riot-rs-boards" }
riot-rs-builtin-sensors = { path = "../../src/riot-rs-builtin-sensors" }

[target.'cfg(capability = "hw/usb-device-port")'.dependencies]
riot-rs = { path = "../../src/riot-rs", features = ["override-usb-config"] }

[features]
button-readings = []
internal-temp = ["riot-rs/internal-temp"]
