[package]
name = "ariel-os-runqueue"
version = "0.1.0"
license.workspace = true
edition.workspace = true
description = "Ariel OS runqueue implementation"

[lints]
workspace = true

[dependencies]
defmt = { workspace = true, optional = true }

# This is required so that F* can find the required F* model of the Rust core
# lib, as documented in the hax documentation:
# https://hacspec.org/book/quick_start/intro.html#setup-the-crate-you-want-to-verify
[target.'cfg(hax)'.dependencies]
hax-lib = { git = "https://github.com/hacspec/hax", rev = "4dec0f8ea9c867d87421f280221bee15f05fab9f" }

[features]
_test = []
