[package]
name = "riot-rs-builtin-sensors"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
embassy-embedded-hal = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
embassy-time = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
portable-atomic = { workspace = true }
riot-rs-embassy = { workspace = true } # TODO: is this ok?
riot-rs-sensors = { workspace = true }

# Sensor drivers
lis3dh-async = { version = "0.9.2" }
embedded-aht20 = { version = "0.1.1", features = ["async"] }
