[package]
name = "riot-rs-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.5.0"
proc-macro-crate = "3.1.0"
quote = "1.0.35"
syn = { version = "2.0.47", features = ["full"] }

[dev-dependencies]
embassy-net = { workspace = true } # FIXME: use the re-export from riot-rs when we rebase this
heapless = { workspace = true }
riot-rs = { workspace = true, features = ["usb_ethernet", "override-network-config"] }
trybuild = "1.0.89"

[lib]
proc-macro = true
