[package]
name = "riot-rs-nrf"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if = { workspace = true }
defmt = { workspace = true, optional = true }
embassy-executor = { workspace = true, default-features = false, features = [
  "arch-cortex-m",
] }
embassy-nrf = { workspace = true, default-features = false, features = [
  "time-driver-rtc1",
  "time",
  "unstable-pac",
  "rt",
] }
embedded-hal-async = { workspace = true }
paste = { workspace = true }
portable-atomic = { workspace = true }
riot-rs-debug = { workspace = true }
riot-rs-random = { workspace = true, optional = true }
riot-rs-shared-types = { workspace = true }

[target.'cfg(context = "nrf52832")'.dependencies]
embassy-nrf = { workspace = true, features = ["nrf52832"] }

[target.'cfg(context = "nrf52840")'.dependencies]
embassy-nrf = { workspace = true, features = ["nrf52840"] }

[target.'cfg(context = "nrf5340")'.dependencies]
embassy-nrf = { workspace = true, features = ["nrf5340-app-s"] }

[features]
## Enables GPIO interrupt support.
external-interrupts = [
  "embassy-nrf/gpiote",
  "riot-rs-shared-types/external-interrupts",
]

## Enables seeding the random number generator from hardware.
hwrng = ["dep:riot-rs-random"]

## Enables I2C support.
i2c = ["riot-rs-shared-types/i2c"]
## Enables SPI support.
spi = ["riot-rs-shared-types/spi"]

## Enables USB support.
usb = []

## Enables defmt support.
defmt = ["dep:defmt", "embassy-nrf/defmt"]

## Enables the interrupt executor.
executor-interrupt = ["embassy-executor/executor-interrupt"]
