[package]
name = "riot-rs-sensors"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-hal = { workspace = true }
heapless = { workspace = true }
linkme = { workspace = true }
portable-atomic = { workspace = true }
riot-rs-debug = { workspace = true } # TODO: debug only
riot-rs-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
static_cell = { workspace = true }

[features]
# These features could be codegened
max-reading-value-min-count-2 = ["riot-rs-macros/max-reading-value-min-count-2"]
max-reading-value-min-count-3 = ["riot-rs-macros/max-reading-value-min-count-3"]
max-reading-value-min-count-9 = ["riot-rs-macros/max-reading-value-min-count-9"]
max-reading-value-min-count-12 = [
  "riot-rs-macros/max-reading-value-min-count-12",
]
