[package]
name = "riot-rs-shared-types"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
embassy-futures = { workspace = true }
embassy-time = { workspace = true }
embedded-hal = { workspace = true }

[features]
## Enables GPIO interrupt support.
external-interrupts = []

## Enables I2C support.
i2c = []
## Enables SPI support.
spi = []
