[package]
name = "riot-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
linkme = { workspace = true }
riot-rs-boards = { path = "../riot-rs-boards" }
riot-rs-buildinfo = { path = "../riot-rs-buildinfo" }
riot-rs-embassy = { path = "../riot-rs-embassy" }
riot-rs-macros = { path = "../riot-rs-macros" }
riot-rs-rt = { path = "../riot-rs-rt" }
riot-rs-threads = { path = "../riot-rs-threads", optional = true }
static_cell = { workspace = true }

[features]
debug-console = ["riot-rs-rt/debug-console"]
dev-doc = ["riot-rs-rt/dev-doc", "riot-rs-embassy/dev-doc"]
net = ["riot-rs-embassy/net"]
no-boards = ["riot-rs-boards/no-boards"]
override-network-config = ["riot-rs-embassy/override-network-config"]
override-usb-config = ["riot-rs-embassy/override-usb-config"]
silent-panic = ["riot-rs-rt/silent-panic"]
std = ["riot-rs-rt/std"]
threading = ["dep:riot-rs-threads", "riot-rs-rt/threading", "riot-rs-embassy/threading"]
time = ["riot-rs-embassy/time"]
usb = ["riot-rs-embassy/usb"]
usb_ethernet = ["riot-rs-embassy/usb_ethernet"]
wifi_cyw43 = ["riot-rs-embassy/wifi_cyw43"]
