[package]
name = "st-f429i-discovery"
version = "0.1.0"
license.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { workspace = true, features = ["stm32f429zi"] }
ariel-os-debug = { workspace = true, features = ["rtt-target"] }
ariel-os-rt.workspace = true
